[package]
name = "avro-rs-ffi"
version = "0.0.1"
authors = ["Flavien Raiynaud <flavien.raynaud@gmail.com>", "Antonio Verardi <antonio.uccio.verardi@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "^1.0"
avro = { git = "https://github.com/flavray/avro-rs", branch = "dev" }
