[package]
name = "avro-rs-ffi"
version = "0.0.1"
authors = ["Flavien Raiynaud <flavien.raynaud@gmail.com>", "Antonio Verardi <antonio.uccio.verardi@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[features]
snappy = ["avro/snappy"]

[profile.release]
lto = true

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
serde = "^1.0"
serde-pickle = "^0.4"
avro = { git = "https://github.com/flavray/avro-rs", branch = "dev" }
