[package]
name = "avro-rs-ffi"
version = "0.0.1"
authors = ["Flavien Raynaud <flavien.raynaud@gmail.com>", "Antonio Verardi <antonio.uccio.verardi@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[features]
snappy = ["avro-rs/snappy"]

[profile.release]
lto = true

[dependencies]
avro-rs = "^0.4.0"
failure = "0.1.1"
failure_derive = "0.1.1"
serde = "^1.0"
serde-pickle = "^0.4"
